# A3-hcds-hcc-bias

./: LICENSE  README.md  blog.md  pyproject.toml
data_clean/: ORES_no_scores.csv  countries_no_match.csv  politicians_by_country.csv
results/: country_coverage_data_bottom_10.csv  country_coverage_data_top_10.csv  country_relative_quality_data_bottom_10.csv  country_relative_quality_data_top_10.csv  region_coverage_data.csv  region_relative_quality_data.csv
src/: A3_Wikipedia_ORES_Bias.ipynb
