[tool.poetry]
name = "A3-hcds-hcc-bias"
version = "0.1.0"
description = ""
authors = ["marisanest <marisa.f.nest@fu-berlin.de>"]

[tool.poetry.dependencies]
python = "^3.6.1"
pandas = "^1.1.3"
jupyter = "^1.0.0"
ipykernel = "^5.3.4"
requests = "^2.24.0"
numpy = "^1.19.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
